[package]
name = "tun"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = { version = "0.2.150", features = ["std"], default-features = false }
ipnet = { version = "2.9.0", features = ["std"], default-features = false }
log = { version = "0.4.20", features = [], default-features = false }
env_logger = { version = "0.10.1", features = ["auto-color", "humantime"], default-features = false }
